[gd_scene load_steps=5 format=3 uid="uid://dm3lsjinc1vdr"]

[ext_resource type="Script" path="res://code/towers/basic_tower.gd" id="1_04qs1"]
[ext_resource type="ArrayMesh" uid="uid://dyqtjpigslwv" path="res://models/Kenney/OBJ format/unit-wall-tower.obj" id="1_mt85y"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cgkgj"]
data = PackedVector3Array(0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0, 0.2887, 0, 0, 0.5774, 0.5, 0, -0.2887, 0, 0, -0.5774, 0, 0, 0.5774, 0, 0, -0.5774, -0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0, -0.5774, -0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0.1, 0.2887, 0.5, 0, 0.2887, 0.5, 0.1, 0.2887, 0, 0, 0.5774, 0, 0.1, 0.5774, 0.5, 0, -0.2887, 0, 0.1, -0.5774, 0, 0, -0.5774, 0, 0.1, -0.5774, 0.5, 0, -0.2887, 0.5, 0.1, -0.2887, 0, 0, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, -0.2887, -0.5, 0.1, -0.2887, 0, 0, -0.5774, 0, 0.1, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, 0.2887, -0.5, 0, -0.2887, -0.5, 0, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0.1, 0.5774, 0, 0, 0.5774, 0, 0.1, 0.5774, -0.5, 0, 0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.2, 0.2887, 0, 0.2, 0.5774, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0, 0.2, 0.5774, 0, 0.2, -0.5774, 0, 0.2, -0.5774, 0, 0.2, 0.5774, -0.5, 0.2, 0.2887, 0, 0.2, -0.5774, -0.5, 0.2, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, 0, 0.2, 0.5774, 0, 0.1, 0.5774, 0, 0.2, 0.5774, -0.5, 0.1, 0.2887, -0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0.5, 0.2, 0.2887, 0.5, 0.1, 0.2887, 0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0, 0.2, 0.5774, 0.5, 0.1, -0.2887, 0, 0.2, -0.5774, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0.1, -0.2887, 0.5, 0.2, -0.2887, 0.5, 0.1, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0, 0.1, -0.5774, -0.5, 0.2, -0.2887, -0.5, 0.1, -0.2887, -0.5, 0.2, -0.2887, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0, 0.2887, 0, 0, 0.5774, 0.5, 0, -0.2887, 0, 0, -0.5774, 0, 0, 0.5774, 0, 0, -0.5774, -0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0, -0.5774, -0.5, 0, -0.2887, 0, 0, 0.5774, 0.5, 0.1, 0.2887, 0.5, 0, 0.2887, 0.5, 0.1, 0.2887, 0, 0, 0.5774, 0, 0.1, 0.5774, 0.5, 0, -0.2887, 0, 0.1, -0.5774, 0, 0, -0.5774, 0, 0.1, -0.5774, 0.5, 0, -0.2887, 0.5, 0.1, -0.2887, 0, 0, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, -0.2887, -0.5, 0.1, -0.2887, 0, 0, -0.5774, 0, 0.1, -0.5774, -0.5, 0.1, -0.2887, -0.5, 0, 0.2887, -0.5, 0, -0.2887, -0.5, 0, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0.5, 0, -0.2887, 0.5, 0, 0.2887, -0.5, 0, 0.2887, 0, 0.1, 0.5774, 0, 0, 0.5774, 0, 0.1, 0.5774, -0.5, 0, 0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.1, -0.2887, -0.5, 0.1, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.2, 0.2887, 0, 0.2, 0.5774, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0, 0.2, 0.5774, 0, 0.2, -0.5774, 0, 0.2, -0.5774, 0, 0.2, 0.5774, -0.5, 0.2, 0.2887, 0, 0.2, -0.5774, -0.5, 0.2, 0.2887, -0.5, 0.2, -0.2887, -0.5, 0.1, 0.2887, 0, 0.2, 0.5774, 0, 0.1, 0.5774, 0, 0.2, 0.5774, -0.5, 0.1, 0.2887, -0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0.5, 0.2, 0.2887, 0.5, 0.1, 0.2887, 0.5, 0.2, 0.2887, 0, 0.1, 0.5774, 0, 0.2, 0.5774, 0.5, 0.1, -0.2887, 0, 0.2, -0.5774, 0, 0.1, -0.5774, 0, 0.2, -0.5774, 0.5, 0.1, -0.2887, 0.5, 0.2, -0.2887, 0.5, 0.1, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.2, -0.2887, 0.5, 0.2, 0.2887, 0.5, 0.1, -0.2887, 0.5, 0.1, 0.2887, 0, 0.1, -0.5774, -0.5, 0.2, -0.2887, -0.5, 0.1, -0.2887, -0.5, 0.2, -0.2887, 0, 0.1, -0.5774, 0, 0.2, -0.5774)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ujotp"]
height = 1.0
radius = 1.5

[node name="Basic Tower" type="StaticBody3D"]
script = ExtResource("1_04qs1")

[node name="Unit-wall-tower" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_mt85y")

[node name="Marker3D" type="Marker3D" parent="Unit-wall-tower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.342927, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_cgkgj")

[node name="MobDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("CylinderShape3D_ujotp")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShotCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
